[gd_scene load_steps=19 format=3]

[ext_resource type="Script" path="res://assets/boss/secret_boss_fight.gd" id="1"]
[ext_resource type="Script" path="res://assets/boss/HpBoss2.gd" id="2"]
[ext_resource type="FontFile" uid="uid://dffsandg8wwdg" path="res://assets/fonts/better-vcr-5.2.ttf" id="3"]
[ext_resource type="Texture2D" uid="uid://bur1allxvc3pu" path="res://assets/textures/tile.png" id="4"]
[ext_resource type="PackedScene" uid="uid://c4hgblrlrpm1d" path="res://assets/scenes/soul_1.tscn" id="5"]
[ext_resource type="Texture2D" uid="uid://djrk3nc7b0tew" path="res://assets/textures/soul2.png" id="6"]
[ext_resource type="PackedScene" uid="uid://ddeses8cygw0b" path="res://assets/scenes/death_count.tscn" id="7"]
[ext_resource type="AudioStream" uid="uid://by3oku2ikxqq2" path="res://assets/music/Fight_Scene.mp3" id="8"]

[sub_resource type="Gradient" id="1"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(1, 0, 0, 1)
script = null

[sub_resource type="GradientTexture2D" id="2"]
gradient = SubResource("1")
width = 500
height = 20
script = null

[sub_resource type="TileSetAtlasSource" id="3"]
texture = ExtResource("4")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:0/0/script = null
script = null

[sub_resource type="TileSet" id="4"]
physics_layer_0/collision_layer = 1
sources/1 = SubResource("3")
script = null

[sub_resource type="RectangleShape2D" id="5"]
size = Vector2(9.5, 9.5)
script = null

[sub_resource type="Animation" id="6"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BossSecret:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(544, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BossSecret:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(254, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BossSecret:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
script = null

[sub_resource type="Animation" id="7"]
resource_name = "fight"
length = 6.0
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BossSecret:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(544, -0.25, 0, 0.25, 0, 488, -0.25, 0, 0.25, 0, 440, -0.25, 0, 0.25, 0, 416, -0.25, 0, 0.25, 0, 440, -0.25, 0, 0.25, 0, 488, -0.25, 0, 0.25, 0, 544, -0.25, 0, 0.25, 0, 600, -0.25, 0, 0.25, 0, 648, -0.25, 0, 0.25, 0, 672, -0.25, 0, 0.25, 0, 632, -0.25, 0, 0.25, 0, 600, -0.25, 0, 0.25, 0, 544, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4, 4.5, 5, 5.5, 6)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BossSecret:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(224, -0.25, 0, 0.25, 0, 248, -0.25, 0, 0.25, 0, 296, -0.25, 0, 0.25, 0, 352, -0.25, 0, 0.25, 0, 408, -0.25, 0, 0.25, 0, 456, -0.25, 0, 0.25, 0, 480, -0.25, 0, 0.25, 0, 456, -0.25, 0, 0.25, 0, 408, -0.25, 0, 0.25, 0, 352, -0.25, 0, 0.25, 0, 296, -0.25, 0, 0.25, 0, 248, -0.25, 0, 0.25, 0, 224, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4, 4.5, 5, 5.5, 6)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BossSecret:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
script = null

[sub_resource type="Animation" id="8"]
resource_name = "fight2"
length = 10.0
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BossSecret:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(544, -0.25, 0, 0.25, 0, 488, -0.25, 0, 0.25, 0, 440, -0.25, 0, 0.25, 0, 416, -0.25, 0, 0.25, 0, 496, -0.25, 0, 0.25, 0, 416, -0.25, 0, 0.25, 0, 440, -0.25, 0, 0.25, 0, 488, -0.25, 0, 0.25, 0, 544, -0.25, 0, 0.25, 0, 544, -0.25, 0, 0.25, 0, 544, -0.25, 0, 0.25, 0, 600, -0.25, 0, 0.25, 0, 648, -0.25, 0, 0.25, 0, 672, -0.25, 0, 0.25, 0, 592, -0.25, 0, 0.25, 0, 672, -0.25, 0, 0.25, 0, 632, -0.25, 0, 0.25, 0, 600, -0.25, 0, 0.25, 0, 544, -0.25, 0, 0.25, 0, 544, -0.25, 0, 0.25, 0, 544, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4, 4.5, 5, 5.5, 6, 6.5, 7, 7.5, 8, 8.5, 9, 9.5, 10)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BossSecret:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(224, -0.25, 0, 0.25, 0, 248, -0.25, 0, 0.25, 0, 296, -0.25, 0, 0.25, 0, 352, -0.25, 0, 0.25, 0, 352, -0.25, 0, 0.25, 0, 352, -0.25, 0, 0.25, 0, 408, -0.25, 0, 0.25, 0, 456, -0.25, 0, 0.25, 0, 480, -0.25, 0, 0.25, 0, 400, -0.25, 0, 0.25, 0, 480, -0.25, 0, 0.25, 0, 456, -0.25, 0, 0.25, 0, 408, -0.25, 0, 0.25, 0, 352, -0.25, 0, 0.25, 0, 352, -0.25, 0, 0.25, 0, 352, -0.25, 0, 0.25, 0, 296, -0.25, 0, 0.25, 0, 248, -0.25, 0, 0.25, 0, 224, -0.25, 0, 0.25, 0, 304, -0.25, 0, 0.25, 0, 224, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4, 4.5, 5, 5.5, 6, 6.5, 7, 7.5, 8, 8.5, 9, 9.5, 10)
}
script = null

[sub_resource type="AnimationLibrary" id="9"]
_data = {
"RESET": SubResource("6"),
"fight": SubResource("7"),
"fight2": SubResource("8")
}
script = null

[sub_resource type="RectangleShape2D" id="10"]
size = Vector2(10, 10)
script = null

[node name="SecretBossFight" type="Node2D" node_paths=PackedStringArray("ui")]
script = ExtResource("1")
ui = NodePath("HpBoss")
metadata/_edit_vertical_guides_ = [544.0]
metadata/_edit_horizontal_guides_ = [352.0]

[node name="Quit" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="HpBoss" type="CanvasLayer" parent="."]
script = ExtResource("2")

[node name="Control" type="Control" parent="HpBoss"]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="Hp" type="Control" parent="HpBoss/Control"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2

[node name="ColorRect" type="ColorRect" parent="HpBoss/Control/Hp"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -250.0
offset_right = 250.0
offset_bottom = 20.0
grow_horizontal = 2
color = Color(0.576471, 0, 0, 1)

[node name="TextureProgressBar" type="TextureProgressBar" parent="HpBoss/Control/Hp"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 20.0
grow_horizontal = 2
max_value = 1000.0
value = 1000.0
texture_progress = SubResource("2")

[node name="Hp" type="Label" parent="HpBoss/Control/Hp/TextureProgressBar"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -18.0
offset_top = 3.0
offset_right = 18.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3")

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(-2112, -480)
tile_set = SubResource("4")
format = 2
layer_0/tile_data = PackedInt32Array(3539037, 1, 0, 3539038, 1, 0, 3539039, 1, 0, 3539040, 1, 0, 3539041, 1, 0, 3539042, 1, 0, 3539043, 1, 0, 3539044, 1, 0, 3539045, 1, 0, 3539046, 1, 0, 3539047, 1, 0, 3539048, 1, 0, 3211357, 1, 0, 3211358, 1, 0, 3211359, 1, 0, 3211360, 1, 0, 3211361, 1, 0, 3211362, 1, 0, 3211363, 1, 0, 3211364, 1, 0, 3211365, 1, 0, 3211366, 1, 0, 3211367, 1, 0, 3211368, 1, 0, 3211369, 1, 0, 3211370, 1, 0, 3211371, 1, 0, 3211372, 1, 0, 3211373, 1, 0, 3211374, 1, 0, 3211375, 1, 0, 3211376, 1, 0, 3211377, 1, 0, 3211378, 1, 0, 3211379, 1, 0, 3211380, 1, 0, 3211381, 1, 0, 3211382, 1, 0, 3211383, 1, 0, 3539049, 1, 0, 3539050, 1, 0, 3539051, 1, 0, 3539052, 1, 0, 3539053, 1, 0, 3539054, 1, 0, 3539055, 1, 0, 3539056, 1, 0, 3539057, 1, 0, 3539058, 1, 0, 3539059, 1, 0, 3539060, 1, 0, 3539061, 1, 0, 3539062, 1, 0, 3539063, 1, 0, 3211384, 1, 0, 3211385, 1, 0, 3211386, 1, 0, 3211387, 1, 0, 3211388, 1, 0, 3211389, 1, 0, 3539064, 1, 0, 3539065, 1, 0, 3539066, 1, 0, 3539067, 1, 0, 3539068, 1, 0, 3539069, 1, 0, 3211390, 1, 0, 3145854, 1, 0, 3080318, 1, 0, 3080319, 1, 0, 3080320, 1, 0, 3080321, 1, 0, 3080322, 1, 0, 3080323, 1, 0, 3080324, 1, 0, 3080325, 1, 0, 3539070, 1, 0, 3604606, 1, 0, 3670142, 1, 0, 3670143, 1, 0, 3670144, 1, 0, 3670145, 1, 0, 3670146, 1, 0, 3670147, 1, 0, 3670148, 1, 0, 3670149, 1, 0, 3670150, 1, 0, 3670151, 1, 0, 3670152, 1, 0, 3080326, 1, 0, 3080327, 1, 0, 3080328, 1, 0, 3539082, 1, 0, 3539085, 1, 0, 3539086, 1, 0, 3145857, 1, 0, 3211393, 1, 0, 3145860, 1, 0, 3211396, 1, 0, 3145863, 1, 0, 3211399, 1, 0, 3080329, 1, 0, 3080330, 1, 0, 3145866, 1, 0, 3211402, 1, 0, 3670153, 1, 0, 3670154, 1, 0, 3604618, 1, 0, 3539073, 1, 0, 3539076, 1, 0, 3604612, 1, 0, 3604609, 1, 0, 3539079, 1, 0, 3604615, 1, 0, 3670155, 1, 0, 3670156, 1, 0, 3670157, 1, 0, 3604621, 1, 0, 3080331, 1, 0, 3080332, 1, 0, 3080333, 1, 0, 3145869, 1, 0, 3211405, 1, 0, 3211406, 1, 0, 3211407, 1, 0, 3211408, 1, 0, 3211409, 1, 0, 3211410, 1, 0, 3211411, 1, 0, 3211412, 1, 0, 3211413, 1, 0, 3211414, 1, 0, 3539087, 1, 0, 3539088, 1, 0, 3539089, 1, 0, 3539090, 1, 0, 3539091, 1, 0, 3539092, 1, 0, 3539093, 1, 0, 3539094, 1, 0, 3211415, 1, 0, 3211416, 1, 0, 3211417, 1, 0, 3211418, 1, 0, 3539095, 1, 0, 3539096, 1, 0, 3539097, 1, 0, 3539098, 1, 0, 3145882, 1, 0, 3080346, 1, 0, 3014810, 1, 0, 2949274, 1, 0, 2883738, 1, 0, 2818202, 1, 0, 2752666, 1, 0, 2687130, 1, 0, 2621594, 1, 0, 2621595, 1, 0, 2621596, 1, 0, 2621597, 1, 0, 2621598, 1, 0, 2621599, 1, 0, 2621600, 1, 0, 2621601, 1, 0, 2621602, 1, 0, 2621603, 1, 0, 2621604, 1, 0, 2621605, 1, 0, 2621606, 1, 0, 2621607, 1, 0, 2621608, 1, 0, 2621609, 1, 0, 2621610, 1, 0, 2621611, 1, 0, 3604634, 1, 0, 3670170, 1, 0, 3735706, 1, 0, 3801242, 1, 0, 3866778, 1, 0, 3932314, 1, 0, 4128922, 1, 0, 4063386, 1, 0, 3997850, 1, 0, 4128923, 1, 0, 4128924, 1, 0, 4128925, 1, 0, 4128926, 1, 0, 4128927, 1, 0, 4128928, 1, 0, 4128929, 1, 0, 4128930, 1, 0, 4128931, 1, 0, 4128932, 1, 0, 4128933, 1, 0, 4128934, 1, 0, 4128935, 1, 0, 4128936, 1, 0, 4128937, 1, 0, 4128938, 1, 0, 4128939, 1, 0, 4128940, 1, 0, 4128941, 1, 0, 4128942, 1, 0, 4128943, 1, 0, 4128944, 1, 0, 4128945, 1, 0, 2621612, 1, 0, 2621613, 1, 0, 2621614, 1, 0, 2621615, 1, 0, 2621616, 1, 0, 2621617, 1, 0, 2687153, 1, 0, 2752689, 1, 0, 2818225, 1, 0, 2883761, 1, 0, 2949297, 1, 0, 3014833, 1, 0, 3080369, 1, 0, 3145905, 1, 0, 3211441, 1, 0, 3539121, 1, 0, 3604657, 1, 0, 3670193, 1, 0, 3735729, 1, 0, 3801265, 1, 0, 3866801, 1, 0, 3932337, 1, 0, 3997873, 1, 0, 4063409, 1, 0, 3211442, 1, 0, 3211443, 1, 0, 3211444, 1, 0, 3211445, 1, 0, 3211446, 1, 0, 3211447, 1, 0, 3211448, 1, 0, 3211449, 1, 0, 3211450, 1, 0, 3211451, 1, 0, 3211452, 1, 0, 3211453, 1, 0, 3539122, 1, 0, 3539124, 1, 0, 3539125, 1, 0, 3539126, 1, 0, 3539127, 1, 0, 3539128, 1, 0, 3539129, 1, 0, 3539130, 1, 0, 3539131, 1, 0, 3539132, 1, 0, 3539133, 1, 0, 3211454, 1, 0, 3211455, 1, 0, 3211456, 1, 0, 3211457, 1, 0, 3211458, 1, 0, 3539134, 1, 0, 3539135, 1, 0, 3539136, 1, 0, 3539137, 1, 0, 3539138, 1, 0, 3539139, 1, 0, 3211459, 1, 0, 3276954, 1, 0, 3342490, 1, 0, 3408026, 1, 0, 3473562, 1, 0, 3276977, 1, 0, 3342513, 1, 0, 3408049, 1, 0, 3473585, 1, 0, 3539123, 1, 0)

[node name="Soul1" parent="." instance=ExtResource("5")]
position = Vector2(544, 352)
collision_layer = 79

[node name="BossSecret" type="CharacterBody2D" parent="."]
position = Vector2(544, 254)
collision_layer = 0
collision_mask = 0
metadata/_edit_group_ = true

[node name="Hit" type="Area2D" parent="BossSecret"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="BossSecret/Hit"]
shape = SubResource("5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="BossSecret"]
root_node = NodePath("../..")
libraries = {
"": SubResource("9")
}

[node name="Sprite2D" type="Sprite2D" parent="BossSecret"]
scale = Vector2(0.635, 0.635)
texture = ExtResource("6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BossSecret"]
shape = SubResource("10")

[node name="PosAtk" type="Marker2D" parent="BossSecret"]

[node name="Timer" type="Timer" parent="."]

[node name="DeathCount" parent="." instance=ExtResource("7")]

[node name="AtkTimer" type="Timer" parent="."]
one_shot = true

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8")
autoplay = true

[connection signal="body_entered" from="BossSecret/Hit" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="AtkTimer" to="." method="_on_atk_timer_timeout"]
[connection signal="finished" from="Music" to="." method="_on_music_finished"]
